--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "nextapp",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "firebase": "^10.12.2",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-firebase-hooks": "^5.1.1"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+    "name": "nextapp",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "cypress": "^13.11.0",
+        "cypress-cucumber-preprocessor": "^4.3.1",
+        "firebase": "^10.12.2",
+        "next": "14.2.3",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-firebase-hooks": "^5.1.1",
+        "save-dev": "^0.0.1-security"
+    },
+    "devDependencies": {
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1"
+    },
+    "cypress-cucumber-preprocessor": {
+        "nonGlobalStepDefinitions": true
+    }
 }
